<resources>
    <string name="app_name">Nevermind</string>
    <string name="package_name">name.leesah.nirvana</string>

    <!-- MainActivity navigation-->
    <string name="navigation_settings">Settings</string>
    <string name="navigation_medications">Medicines</string>
    <string name="navigation_reminders">Today</string>

    <string name="no_reminders_for_today">No intake for today.</string>
    <string name="no_medication">Start by adding a medicine.</string>

    <!-- MedicationActivity titles -->
    <string name="add_medication">New medicine</string>
    <string name="edit_medication">%s</string>

    <!-- Buttons -->
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <!-- Errors -->
    <string name="err_dosage_already_added">Dosage already added for that time.</string>

    <!-- Treatment -->
    <string name="treatment_recurring_none">Not recurring</string>
    <string name="treatment_recurring_n_times">For n Times</string>
    <string name="treatment_recurring_until_date">Until date</string>

    <!-- Treatment preference titles & summaries -->
    <string name="pref_title_treatment">Treatment cycles</string>
    <string name="pref_summary_treatment">Enable and disable cycled treatment support.</string>
    <string name="pref_title_treatment_enabled">Cycled treatment</string>
    <string name="pref_summary_treatment_enabled">Define when a treatment cycle starts and ends, and how it recurs. Medicine intake reminders will adapt accordingly.</string>
    <string name="prefcat_title_treatment_first_cycle">Treatment cycle</string>
    <string name="pref_title_treatment_first_day">First Day</string>
    <string name="pref_title_treatment_cycle_length">Length of cycle</string>
    <string name="prefcat_title_treatment_recurring">Recurring</string>
    <string name="pref_title_treatment_repeating">Treatment cycle recurring</string>

    <!-- Medication -->
    <string name="medication_starting_immediately">Do not delay</string>
    <string name="medication_starting_after_period">Delay for certain period</string>
    <string name="medication_repeating_everyday">Everyday</string>
    <string name="medication_repeating_every_n_days">Every n days</string>
    <string name="medication_repeating_days_of_week">Days of week</string>
    <string name="medication_reminding_certain_hours">At certain hours</string>
    <string name="medication_reminding_every_n_hours">Every n hours</string>
    <string name="medication_stopping_with_cycle">Do not stop (unless treatment cycle ends)</string>
    <string name="medication_stopping_after_period">Stop after certain period</string>
    <string name="to_string_everyday">everyday</string>
    <string name="to_string_medication_repeating_every_n_days">every %d days</string>
    <string name="to_string_medication_repeating_days_of_week">every week on %s</string>
    <string name="to_string_starting_immediately">Do not delay</string>
    <string name="to_string_stopping_after_period">Stop in %s</string>

    <!-- Medication preference titles & summaries-->
    <string name="prefcat_title_medication_basics">Basics</string>
    <string name="pref_title_medication_name">Name</string>
    <string name="pref_title_medication_manufacturer">Manufacturer</string>
    <string name="pref_title_dosage_form">Form</string>
    <string name="prefcat_title_medication_strategies">Intakes</string>
    <string name="pref_title_medication_starting">Starts</string>
    <string name="pref_title_medication_repeating">On which days</string>
    <string name="pref_title_medication_reminding">On which hours of day</string>
    <string name="prefcat_title_medication_repeating">Repeating model</string>
    <string name="prefcat_title_medication_reminding">Reminding model</string>
    <string name="prefcat_title_details">Details</string>

    <!-- Notification -->
    <string name="notification_title">Time to take %1$s</string>
    <plurals name="notification_text">
        <item quantity="one">Take %1$d dose at %2$s.</item>
        <item quantity="other">Take %1$d doses at %2$s.</item>
    </plurals>
    <string name="snooze">Snooze</string>
    <string name="done">Done</string>

    <!-- Settings -->
    <string name="prefcat_title_preferences">Preferences</string>
    <string name="pref_title_notification">Notification</string>
    <string name="pref_summary_notification">Ringtones, vibrations, etc.</string>
    <string name="pref_title_new_message_notification">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="prefcat_title_information">Information</string>
    <string name="pref_summary_website">https://leesah.github.io/nirvana</string>
    <string name="pref_title_website">Visit website</string>
    <string name="pref_title_about">About</string>

    <string name="monday_of_week">Mon</string>
    <string name="tuesday_of_week">Tue</string>
    <string name="wednesday_of_week">Wed</string>
    <string name="thursday_of_week">Thu</string>
    <string name="friday_of_week">Fri</string>
    <string name="saturday_of_week">Sat</string>
    <string name="sunday_of_week">Sun</string>

    <!-- TimedDosage -->
    <string name="comma_equivalent">", "</string>
    <string name="to_string_every_n_hours_starting_at">starting from %s</string>
    <string name="to_string_every_n_hours">%1$s %2$s, starting at %3$s</string>
    <string name="note_no_more_intakes">No more intakes for today.</string>
    <string name="note_time_until_next_intake">%s until next intake.</string>
    <string name="unknown_medication">Unknown Medication</string>
    <string name="reminder_details">Details</string>
    <string name="ignore_reminder">Ignore</string>
    <plurals name="to_string_timed_dosage">
        <item quantity="one">%1$d unit at %2$s</item>
        <item quantity="other">%1$d units at %2$s</item>
    </plurals>
    <plurals name="to_string_every_n_hours_every_n_hours">
        <item quantity="one">every hour</item>
        <item quantity="other">every %d hours</item>
    </plurals>
    <plurals name="var_doses" >
        <item quantity="one">%d dose</item>
        <item quantity="other">%d doses</item>
    </plurals>

</resources>
